test/spec/gc/global.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/gc/global.wast
;;; ARGS*: --enable-gc
(;; STDOUT ;;;
out/test/spec/gc/global.wast:251: assert_trap passed: undefined table index
out/test/spec/gc/global.wast:273: assert_invalid passed:
  out/test/spec/gc/global/global.1.wasm:0000029: error: can't global.set on immutable global at index 0.
  0000029: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:278: assert_invalid passed:
  out/test/spec/gc/global/global.2.wasm:0000035: error: can't global.set on immutable global at index 0.
  0000035: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:287: assert_invalid passed:
  out/test/spec/gc/global/global.5.wasm:0000013: error: invalid initializer: instruction not valid in initializer expression: f32.neg
  0000013: error: OnUnaryExpr callback failed
out/test/spec/gc/global.wast:292: assert_invalid passed:
  out/test/spec/gc/global/global.6.wasm:000000f: error: invalid initializer: instruction not valid in initializer expression: local.get
  000000f: error: OnLocalGetExpr callback failed
out/test/spec/gc/global.wast:297: assert_invalid passed:
  out/test/spec/gc/global/global.7.wasm:0000013: error: invalid initializer: instruction not valid in initializer expression: f32.neg
  0000013: error: OnUnaryExpr callback failed
out/test/spec/gc/global.wast:302: assert_invalid passed:
  out/test/spec/gc/global/global.8.wasm:0000010: error: invalid initializer: instruction not valid in initializer expression: nop
  0000010: error: OnNopExpr callback failed
out/test/spec/gc/global.wast:307: assert_invalid passed:
  out/test/spec/gc/global/global.9.wasm:0000010: error: invalid initializer: instruction not valid in initializer expression: i32.ctz
  0000010: error: OnUnaryExpr callback failed
out/test/spec/gc/global.wast:312: assert_invalid passed:
  out/test/spec/gc/global/global.10.wasm:000000e: error: invalid initializer: instruction not valid in initializer expression: nop
  000000e: error: OnNopExpr callback failed
out/test/spec/gc/global.wast:317: assert_invalid passed:
  out/test/spec/gc/global/global.11.wasm:0000012: error: type mismatch in initializer expression, expected [i32] but got [f32]
  0000013: error: EndGlobalInitExpr callback failed
out/test/spec/gc/global.wast:322: assert_invalid passed:
  out/test/spec/gc/global/global.12.wasm:0000011: error: type mismatch at end of initializer expression, expected [] but got [i32]
  0000012: error: EndGlobalInitExpr callback failed
out/test/spec/gc/global.wast:327: assert_invalid passed:
  out/test/spec/gc/global/global.13.wasm:000000d: error: type mismatch in initializer expression, expected [i32] but got []
  000000e: error: EndGlobalInitExpr callback failed
out/test/spec/gc/global.wast:332: assert_invalid passed:
  out/test/spec/gc/global/global.14.wasm:0000017: error: type mismatch in initializer expression, expected [funcref] but got [externref]
  0000018: error: EndGlobalInitExpr callback failed
out/test/spec/gc/global.wast:337: assert_invalid passed:
  out/test/spec/gc/global/global.15.wasm:0000027: error: type mismatch at end of initializer expression, expected [] but got [i32]
  0000028: error: EndGlobalInitExpr callback failed
out/test/spec/gc/global.wast:342: assert_invalid passed:
  out/test/spec/gc/global/global.16.wasm:0000027: error: type mismatch at end of initializer expression, expected [] but got [i32]
  0000028: error: EndGlobalInitExpr callback failed
out/test/spec/gc/global.wast:347: assert_invalid passed:
  out/test/spec/gc/global/global.17.wasm:000000f: error: initializer expression can only reference an imported global
  000000f: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:352: assert_invalid passed:
  out/test/spec/gc/global/global.18.wasm:000000f: error: global variable out of range: 1 (max 1)
  000000f: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:357: assert_invalid passed:
  out/test/spec/gc/global/global.19.wasm:0000025: error: global variable out of range: 2 (max 2)
  0000025: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:365: assert_invalid passed:
  out/test/spec/gc/global/global.22.wasm:0000029: error: initializer expression cannot reference a mutable global
  0000029: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:373: assert_malformed passed:
  0000026: error: global mutability must be 0 or 1
out/test/spec/gc/global.wast:386: assert_malformed passed:
  0000026: error: global mutability must be 0 or 1
out/test/spec/gc/global.wast:403: assert_malformed passed:
  0000011: error: global mutability must be 0 or 1
out/test/spec/gc/global.wast:415: assert_malformed passed:
  0000011: error: global mutability must be 0 or 1
out/test/spec/gc/global.wast:429: assert_invalid passed:
  out/test/spec/gc/global/global.29.wasm:000001a: error: global variable out of range: 0 (max 0)
  000001a: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:434: assert_invalid passed:
  out/test/spec/gc/global/global.30.wasm:0000022: error: global variable out of range: 1 (max 1)
  0000022: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:442: assert_invalid passed:
  out/test/spec/gc/global/global.31.wasm:0000034: error: global variable out of range: 1 (max 1)
  0000034: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:450: assert_invalid passed:
  out/test/spec/gc/global/global.32.wasm:000003c: error: global variable out of range: 2 (max 2)
  000003c: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:460: assert_invalid passed:
  out/test/spec/gc/global/global.33.wasm:000001b: error: global variable out of range: 0 (max 0)
  000001b: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:465: assert_invalid passed:
  out/test/spec/gc/global/global.34.wasm:0000023: error: global variable out of range: 1 (max 1)
  0000023: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:473: assert_invalid passed:
  out/test/spec/gc/global/global.35.wasm:0000035: error: global variable out of range: 1 (max 1)
  0000035: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:481: assert_invalid passed:
  out/test/spec/gc/global/global.36.wasm:000003d: error: global variable out of range: 2 (max 2)
  000003d: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:491: assert_invalid passed:
  out/test/spec/gc/global/global.37.wasm:0000021: error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:500: assert_invalid passed:
  out/test/spec/gc/global/global.38.wasm:0000025: error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:510: assert_invalid passed:
  out/test/spec/gc/global/global.39.wasm:0000025: error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:520: assert_invalid passed:
  out/test/spec/gc/global/global.40.wasm:0000027: error: type mismatch in global.set, expected [i32] but got []
  0000027: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:530: assert_invalid passed:
  out/test/spec/gc/global/global.41.wasm:000002a: error: type mismatch in global.set, expected [i32] but got []
  000002a: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:540: assert_invalid passed:
  out/test/spec/gc/global/global.42.wasm:0000025: error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:550: assert_invalid passed:
  out/test/spec/gc/global/global.43.wasm:0000025: error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:560: assert_invalid passed:
  out/test/spec/gc/global/global.44.wasm:0000025: error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:570: assert_invalid passed:
  out/test/spec/gc/global/global.45.wasm:0000021: error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:579: assert_invalid passed:
  out/test/spec/gc/global/global.46.wasm:0000021: error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:588: assert_invalid passed:
  out/test/spec/gc/global/global.47.wasm:0000027: error: type mismatch in global.set, expected [i32] but got []
  0000027: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:598: assert_invalid passed:
  out/test/spec/gc/global/global.48.wasm:0000040: error: type mismatch in global.set, expected [i32] but got []
  0000040: error: OnGlobalSetExpr callback failed
out/test/spec/gc/global.wast:655: assert_invalid passed:
  out/test/spec/gc/global/global.51.wasm:000000f: error: global variable out of range: 1 (max 1)
  000000f: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:663: assert_invalid passed:
  out/test/spec/gc/global/global.52.wasm:0000012: error: global variable out of range: 0 (max 0)
  0000012: error: OnGlobalGetExpr callback failed
out/test/spec/gc/global.wast:674: assert_malformed passed:
  out/test/spec/gc/global/global.53.wat:1:33: error: redefinition of global "$foo"
  (global $foo i32 (i32.const 0))(global $foo i32 (i32.const 0))
                                  ^^^^^^
out/test/spec/gc/global.wast:681: assert_malformed passed:
  out/test/spec/gc/global/global.54.wat:1:34: error: redefinition of global "$foo"
  (import "" "" (global $foo i32))(global $foo i32 (i32.const 0))
                                   ^^^^^^
out/test/spec/gc/global.wast:688: assert_malformed passed:
  out/test/spec/gc/global/global.55.wat:1:34: error: redefinition of global "$foo"
  (import "" "" (global $foo i32))(import "" "" (global $foo i32))
                                   ^^^^^^
119/119 tests passed.
;;; STDOUT ;;)
